--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typeface-roboto-mono": "^1.1.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
